--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,6 @@
 <h1> Nails Come to You
   <p> You ever just need a self care day and just don't find enough time? Busy with the kids, work, or school and need a moment to relax? Can't find the time to get to the salon and get your nails done? 
   </p> We got the solution to all of your problems! Introducing Nails Come to You which is our small business company where you can set up an appointment for someone to come to your work, home, gathering to get your nails done. This experience provides the best quality and saves you the time and effort of having to go to a nail salon when super busy.
-  <img> [alt)check out some of our latest work
+<img src="path/to/image.jpg" alt="Check out our latest work">
 </h1>
+
