--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
   <p>The web is today's mobile main street because over 5.6 billion people are online. It is the central engine of business growth, customer aquistion and brand credibility. It is important to have a great website because this is where people first go to learn about your business. It can make a long lasting first impression. Your website should represent how serious you are about your business.</p>
       </Body>
         </html>
+<p><a href="pages/about.html">Learn More About Us</a></p>
