--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Nails Come to You - Contact Us</title>
+  </head>
+  <body>
+    <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
+    <a href="index.html">Back to Home</a>
 
+    <!-- The <hr> tag creates a horizontal rule (a line), visually separating sections. -->
+    <hr>
+
+    <!-- ====================================================== -->
+    <!--      START: UNIQUE PAGE CONTENT                       -->
+    <!-- Need to Reach Us? -->
+    <!-- Contact Us        -->
+    <!-- ====================================================== -->
+    <h1>Nails Come to You</h1>
+    <p>Ready to book with us? Call or text us at 000-000-000! We are ready for your services</p>
+    <!-- ====================================================== -->
+    <!--      END: UNIQUE PAGE CONTENT                         -->
+    <!-- ====================================================== -->
+    <hr>
+    <!-- The footer provides consistency and a professional closing on every page. -->
+    <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
+  </body>
+</html>
