--- a/services.html
+++ b/services.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Nails Come to You - Services/title>
+  </head>
+  <body>
+    <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
+    <a href="index.html">Back to Home</a>
 
+    <!-- The <hr> tag creates a horizontal rule (a line), visually separating sections. -->
+    <hr>
+
+    <!-- ====================================================== -->
+    <!--      START: UNIQUE PAGE CONTENT                       -->
+    <!-- Our Services -->
+    <!-- Our Services     -->
+    <!-- ====================================================== -->
+    <h1>Nails Come to You</h1>
+    <p>What we have to offer? We offer nail manicures, feet pedicures, acrylics, gell, shellac, dip powder and natural lay over. Not what you need? Call us to ask if we can make it work for you..</p>
+    <!-- ====================================================== -->
+    <!--      END: UNIQUE PAGE CONTENT                         -->
+    <!-- ====================================================== -->
+    <hr>
+    <!-- The footer provides consistency and a professional closing on every page. -->
+    <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
+  </body>
+</html>
