--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nails Come to You - Services/title>
+    <title>Nails Come to You - Services</title>
   </head>
   <body>
     <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
@@ -12,11 +12,11 @@
 
     <!-- ====================================================== -->
     <!--      START: UNIQUE PAGE CONTENT                       -->
-    <!-- Our Services -->
-    <!-- Our Services     -->
+    <!-- What We Have To Offer -->
+    <!-- Services Avaliable        -->
     <!-- ====================================================== -->
     <h1>Nails Come to You</h1>
-    <p>What we have to offer? We offer nail manicures, feet pedicures, acrylics, gell, shellac, dip powder and natural lay over. Not what you need? Call us to ask if we can make it work for you..</p>
+    <p>We have most services you can think of. Nail manicures, feet pedicures, nail acrlyic, shellac, gel, dip powder, natural lay over, you name it. Not listed here? Call us to see if we can make your dream come to life. </p>
     <!-- ====================================================== -->
     <!--      END: UNIQUE PAGE CONTENT                         -->
     <!-- ====================================================== -->
