--- a/services.html
+++ b/services.html
@@ -25,4 +25,6 @@
     <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
   </body>
 </html>
-jasminmazarod.github.io/sitemap.png
+JasminMazaRod.github.io/sitemap
+/png
+
