--- a/services.html
+++ b/services.html
@@ -25,6 +25,5 @@
     <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
   </body>
 </html>
-JasminMazaRod.github.io/sitemap
-/png
+/sitemap/png
 
