--- a/index.html
+++ b/index.html
@@ -8,3 +8,9 @@
       </Body>
         </html>
 <p><a href="pages/about.html">Learn More About Us</a></p>
+<nav>
+  <img src="logo.png" alt="Logo" style="height: 40px; vertical-align: middle;">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
