--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<header style="text-align: center; padding: 50px;">
+  <h1>Welcome to My Website!</h1>
+  <p>Your go-to hub for web development and creativity.</p>
+</header>
 <!DOCTYPE html>
 <html>
   <head>
