--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <tr>
   <td>About</td>
   <td><a href="https://jasminmazarod.github.io/about.html" target="_blank">https://jasminmazarod.github.io/about.html</a></td>
-  <td><a href="httpsjasminmazarod.github.io/services" target="_blank">Validate</a></td>
+  <td><a href="httpsjasminmazarod.github.io/services.html" target="_blank">httpsjasminmazarod.github.io/services.html</a></td>
   <td><a href="https://jasminmazarod.github.io/contact" target="_blank">https://jasminmazarod.github.io/contact.html</a></td>
-  <td><a href="httpsjasminmazarod.github.io/" target="_blank">Validate</a></td>
+  <td><a href="httpsjasminmazarod.github.io/smalllogo.jpg" target="_blank">httpsjasminmazarod.github.io/smalllogo.jpg"></a></td>
   
 </tr>
