--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <tr>
   <td>About</td>
   <td><a href="https://jasminmazarod.github.io/about.html" target="_blank">https://jasminmazarod.github.io/about.html</a></td>
-  <td><a href="https//jasminmazarod.github.io/services.html" target="_blank">https://jasminmazarod.github.io/services.html</a></td>
+  <td><a href="https://jasminmazarod.github.io/services.html" target="_blank">https://jasminmazarod.github.io/services.html</a></td>
   <td><a href="https://jasminmazarod.github.io/contact" target="_blank">https://jasminmazarod.github.io/contact.html</a></td>
   <td><a href="https://jasminmazarod.github.io/smalllogo.jpg" target="_blank">https://jasminmazarod.github.io/smalllogo.jpg"></a></td>
   
