--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <header style="text-align: center; padding: 50px;">
-  <h1>Welcome to My Website!</h1>
-  <p>Your go-to hub for web development and creativity.</p>
+  <h1>Welcome to Nails Come to You!</h1>
+  <p>Your go-to nail services.</p>
 </header>
 <!DOCTYPE html>
 <html>
@@ -8,7 +8,7 @@
 <title> Jasmin Mazariegos - Nails Come to You </title>
   </head>
       <Body>
-  <p>The web is today's mobile main street because over 5.6 billion people are online. It is the central engine of business growth, customer aquistion and brand credibility. It is important to have a great website because this is where people first go to learn about your business. It can make a long lasting first impression. Your website should represent how serious you are about your business.</p>
+  <p>Nails Come to You is a small business that allows you to book one of our nail technicions and instead of you coming to us, we will come to you. We know what it's like to be busy and understand self care is important. We can come to your home, work, or safe space. Let us help your hands and feet feel better.</p>
       </Body>
         </html>
 <p><a href="pages/about.html">Learn More About Us</a></p>
