--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </html>
 <p><a href="pages/about.html">Learn More About Us</a></p>
 <nav>
-  <img src="logo.png" alt="Logo" style="height: 40px; vertical-align: middle;">
+  <img src="smalllogo.jpg" alt="Logo" style="height: 40px; vertical-align: middle;">
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
