--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
   <td><a href="https://jasminmazarod.github.io/about.html" target="_blank">https://jasminmazarod.github.io/about.html</a></td>
   <td><a href="https://jasminmazarod.github.io/services.html" target="_blank">https://jasminmazarod.github.io/services.html</a></td>
   <td><a href="https://jasminmazarod.github.io/contact" target="_blank">https://jasminmazarod.github.io/contact.html</a></td>
-  <td><a href="https://jasminmazarod.github.io/smalllogo.jpg" target="_blank">https://jasminmazarod.github.io/smalllogo.jpg"></a></td>
+  <td><a href="https://jasminmazarod.github.io/images" target="_blank">https://jasminmazarod.github.io/images"></a></td>
   
 </tr>
