--- a/test.html
+++ b/test.html
@@ -1,8 +1,11 @@
 <tr>
   <td>About</td>
   <td><a href="https://jasminmazarod.github.io/about.html" target="_blank">https://jasminmazarod.github.io/about.html</a></td>
+  <td>Services</td>
   <td><a href="https://jasminmazarod.github.io/services.html" target="_blank">https://jasminmazarod.github.io/services.html</a></td>
+  <td>Contact</td>
   <td><a href="https://jasminmazarod.github.io/contact" target="_blank">https://jasminmazarod.github.io/contact.html</a></td>
+  <td>Images</td>
   <td><a href="https://jasminmazarod.github.io/images" target="_blank">https://jasminmazarod.github.io/images"></a></td>
   
 </tr>
