--- a/test.html
+++ b/test.html
@@ -1,11 +1,22 @@
-<tr>
-  <td>About</td>
-  <td><a href="https://jasminmazarod.github.io/about.html" target="_blank">https://jasminmazarod.github.io/about.html</a></td>
-  <td>Services</td>
-  <td><a href="https://jasminmazarod.github.io/services.html" target="_blank">https://jasminmazarod.github.io/services.html</a></td>
-  <td>Contact</td>
-  <td><a href="https://jasminmazarod.github.io/contact" target="_blank">https://jasminmazarod.github.io/contact.html</a></td>
-  <td>Images</td>
-  <td><a href="https://jasminmazarod.github.io/images" target="_blank">https://jasminmazarod.github.io/images"></a></td>
-  
-</tr>
+<table border="1">
+  <tr>
+    <th>Section</th>
+    <th>Link</th>
+    <th>Section</th>
+    <th>Link</th>
+    <th>Section</th>
+    <th>Link</th>
+    <th>Section</th>
+    <th>Link</th>
+  </tr>
+  <tr>
+    <td>About</td>
+    <td><a href="https://jasminmazarod.github.io/about.html" target="_blank">about.html</a></td>
+    <td>Services</td>
+    <td><a href="https://jasminmazarod.github.io/services.html" target="_blank">services.html</a></td>
+    <td>Contact</td>
+    <td><a href="https://jasminmazarod.github.io/contact.html" target="_blank">contact.html</a></td>
+    <td>Images</td>
+    <td><a href="https://jasminmazarod.github.io/images" target="_blank">images</a></td>
+  </tr>
+</table>
