--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,5 @@
-<table border="1"> 
-
-  <thead> 
-
-    <tr> 
-
-      <th>Section</th> 
-
-      <th>Link</th> 
-
-    </tr> 
-
-  </thead> 
-
-  <tbody> 
-
-    <tr> <img>
+<td>
+  <a href="images/small logo.jpg">
+    <img src="images/small logo.jpg" width="120" alt="Jasmin Mazariegos portfolio small logo">
+  </a>
+</td>
