--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,74 @@
-<td>
-  <a href="images/small logo.jpg">
-    <img src="images/small logo.jpg" width="120" alt="Jasmin Mazariegos portfolio small logo">
-  </a>
-</td>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Gallery - Jasmin Mazariegos</title>
+  <style>
+    .gallery-thumb {
+      width: 120px;
+      height: auto;
+      display: block;
+    }
+    table {
+      border-collapse: collapse;
+      margin-top: 2em;
+    }
+    td {
+      padding: 8px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <!-- Global Navigation -->
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="about.html">About</a> |
+    <a href="projects.html">Projects</a> |
+    <a href="gallery.html">Gallery</a>
+  </nav>
+
+  <h1>Gallery</h1>
+  <table>
+    <tr>
+      <td>
+        <a href="images/pinknails.jpg">
+          <img src="images/pinknails.jpg" class="gallery-thumb" alt="Hand with pink painted nails, close-up.">
+        </a>
+      </td>
+      <td>
+        <a href="images/rednails.jpg">
+          <img src="images/rednails.jpg" class="gallery-thumb" alt="Hand with red painted nails, close-up.">
+        </a>
+      </td>
+      <td>
+        <a href="images/whitenails.jpg">
+          <img src="images/whitenails.jpg" class="gallery-thumb" alt="Hand with white painted nails, close-up.">
+        </a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- Placeholder for future image -->
+      </td>
+      <td>
+        <!-- Placeholder for future image -->
+      </td>
+      <td>
+        <!-- Placeholder for future image -->
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <!-- Placeholder for future image -->
+      </td>
+      <td>
+        <!-- Placeholder for future image -->
+      </td>
+      <td>
+        <!-- Placeholder for future image -->
+      </td>
+    </tr>
+  </table>
+</body>
+</html>
