--- a/gallery.html
+++ b/gallery.html
@@ -24,8 +24,9 @@
   <nav>
     <a href="index.html">Home</a> |
     <a href="about.html">About</a> |
-    <a href="projects.html">Projects</a> |
+    <a href="services.html">Services</a> |
     <a href="gallery.html">Gallery</a>
+    <a href="contact.html">Contact Us</a>
   </nav>
 
   <h1>Gallery</h1>
