--- a/gallery.html
+++ b/gallery.html
@@ -34,17 +34,17 @@
     <tr>
       <td>
         <a href="images/pinknails.jpg">
-          <img src="images/pinknails.jpg" class="gallery-thumb" alt="Hand with pink painted nails, close-up.">
+          <img src="images/pinknails.jpg" class="gallery-thumb" alt="Looking to feel your best, refreshed, some self care? Let us help you.">
         </a>
       </td>
       <td>
         <a href="images/rednails.jpg">
-          <img src="images/rednails.jpg" class="gallery-thumb" alt="Hand with red painted nails, close-up.">
+          <img src="images/rednails.jpg" class="gallery-thumb" alt="Valentines? Anniversary? Feeling confident is as important to us as you. Ready for your call.">
         </a>
       </td>
       <td>
         <a href="images/whitenails.jpg">
-          <img src="images/whitenails.jpg" class="gallery-thumb" alt="Hand with white painted nails, close-up.">
+          <img src="images/whitenails.jpg" class="gallery-thumb" alt="You can never go wrong with white nails! Call us.">
         </a>
       </td>
     </tr>
