--- a/test.html
+++ b/test.html
@@ -17,6 +17,6 @@
     <td>Contact</td>
     <td><a href="https://jasminmazarod.github.io/contact.html" target="_blank">contact.html</a></td>
     <td>Images</td>
-    <td><a href="https://jasminmazarod.github.io/gallery target="_blank">images</a></td>
+    <td><a href="https://jasminmazarod.github.io/gallery.html target="_blank">images</a></td>
   </tr>
 </table>
