--- a/test.html
+++ b/test.html
@@ -1,3 +1,16 @@
+<!-- Logo and Navigation -->
+<div style="display: flex; align-items: center; margin-bottom: 20px;">
+  <img src="https://jasminmazarod.github.io/smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px; margin-right: 12px;">
+  <nav>
+    <!-- Example nav links, replace with your actual links if different -->
+    <a href="https://jasminmazarod.github.io/about.html" target="_blank">About</a> |
+    <a href="https://jasminmazarod.github.io/services.html" target="_blank">Services</a> |
+    <a href="https://jasminmazarod.github.io/contact.html" target="_blank">Contact</a> |
+    <a href="https://jasminmazarod.github.io/gallery.html" target="_blank">Gallery</a>
+  </nav>
+</div>
+
+<!-- Your Table -->
 <table border="1">
   <tr>
     <th>Section</th>
