--- a/about.html
+++ b/about.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Nails Come to You - About</title>
-  </head>
-  <body>
-    <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
-    <a href="index.html">Back to Home</a>
-
-    <!-- The <hr> tag creates a horizontal rule (a line), visually separating sections. -->
-    <hr>
-
-    <!-- ====================================================== -->
-    <!--      START: UNIQUE PAGE CONTENT                       -->
-    <!-- About Us-->
-    <!-- About Us       -->
-    <!-- ====================================================== -->
-    <h1>Nails Come to You</h1>
-    <p>We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed.</p>
-    <!-- ====================================================== -->
-    <!--      END: UNIQUE PAGE CONTENT                         -->
-    <!-- ====================================================== -->
-    <hr>
-    <!-- The footer provides consistency and a professional closing on every page. -->
-    <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>About - Jasmin Mazariegos</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
+    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <nav>
+      <a href="index.html" class="btn-primary">Home</a>
+      <a href="about.html" class="btn-primary">About</a>
+      <a href="services.html" class="btn-primary">Services</a>
+      <a href="gallery.html" class="btn-primary">Gallery</a>
+      <a href="contact.html" class="btn-primary">Contact</a>
+    </nav>
+  </div>
+  <h1>About Nails Come to You</h1>
+  <p>
+   We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed
+  </p>
+  <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
+</body>
 </html>
