--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About - Jasmin Mazariegos</title>
+  <title>About - Nails Come to You</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -16,10 +16,10 @@
       <a href="contact.html" class="btn-primary">Contact</a>
     </nav>
   </div>
-  <h1>About Nails Come to You</h1>
+  <h1>About: Nails Come to You</h1>
   <p>
    We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed
   </p>
-  <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
+  <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
