--- a/contact.html
+++ b/contact.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Nails Come to You - Contact Us</title>
-  </head>
-  <body>
-    <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
-    <a href="index.html">Back to Home</a>
-
-    <!-- The <hr> tag creates a horizontal rule (a line), visually separating sections. -->
-    <hr>
-
-    <!-- ====================================================== -->
-    <!--      START: UNIQUE PAGE CONTENT                       -->
-    <!-- Need to Reach Us? -->
-    <!-- Contact Us        -->
-    <!-- ====================================================== -->
-    <h1>Nails Come to You</h1>
-    <p>Ready to book with us? Call or text us at 000-000-000! We are ready for your services</p>
-    <!-- ====================================================== -->
-    <!--      END: UNIQUE PAGE CONTENT                         -->
-    <!-- ====================================================== -->
-    <hr>
-    <!-- The footer provides consistency and a professional closing on every page. -->
-    <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Contact - Nails Come to You</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
+    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <nav>
+      <a href="index.html" class="btn-primary">Home</a>
+      <a href="about.html" class="btn-primary">About</a>
+      <a href="services.html" class="btn-primary">Services</a>
+      <a href="gallery.html" class="btn-primary">Gallery</a>
+      <a href="contact.html" class="btn-primary">Contact</a>
+    </nav>
+  </div>
+  <h1>Contact Us</h1>
+  <p>
+    Ready to book with us? Call or text us at 000-000-000! We are ready for your services!
+  </p>
+  <form>
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name"><br>
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email"><br>
+    <label for="message">Message:</label><br>
+    <textarea id="message" name="message"></textarea><br>
+    <button type="submit" class="btn-primary">Send</button>
+  </form>
+</body>
 </html>
