--- a/services.html
+++ b/services.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Nails Come to You - Services</title>
-  </head>
-  <body>
-    <!-- This link is the 'emergency exit' that takes users back to safety (your homepage). -->
-    <a href="index.html">Back to Home</a>
-
-    <!-- The <hr> tag creates a horizontal rule (a line), visually separating sections. -->
-    <hr>
-
-    <!-- ====================================================== -->
-    <!--      START: UNIQUE PAGE CONTENT                       -->
-    <!-- What We Have To Offer -->
-    <!-- Services Avaliable        -->
-    <!-- ====================================================== -->
-    <h1>Nails Come to You</h1>
-    <p>We have most services you can think of. Nail manicures, feet pedicures, nail acrlyic, shellac, gel, dip powder, natural lay over, you name it. Not listed here? Call us to see if we can make your dream come to life. </p>
-    <!-- ====================================================== -->
-    <!--      END: UNIQUE PAGE CONTENT                         -->
-    <!-- ====================================================== -->
-    <hr>
-    <!-- The footer provides consistency and a professional closing on every page. -->
-    <p>(c) 2025 Your Company Name. All Rights Reserved.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Services - Nails Come to You</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
+    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <nav>
+      <a href="index.html" class="btn-primary">Home</a>
+      <a href="about.html" class="btn-primary">About</a>
+      <a href="services.html" class="btn-primary">Services</a>
+      <a href="gallery.html" class="btn-primary">Gallery</a>
+      <a href="contact.html" class="btn-primary">Contact</a>
+    </nav>
+  </div>
+  <h1>Our Services</h1>
+  <ul>
+    <li>Manicures &amp; Pedicures</li>
+    <li>Nail Art &amp; Design</li>
+    <li>Spa Treatments</li>
+    <li>Self-care Consultations</li>
+    <li>And more!</li>
+  </ul>
+   <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
+</body>
 </html>
-http://jasminmazarod.github.io/sitemap/png
 
