--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
-<header style="text-align: center; padding: 50px;">
-  <h1>Welcome to Nails Come to You!</h1>
-  <p>Your go-to nail services.</p>
-</header>
 <!DOCTYPE html>
-<html>
-  <head>
-<title> Jasmin Mazariegos - Nails Come to You </title>
-  </head>
-      <Body>
-  <p>Nails Come to You is a small business that allows you to book one of our nail technicions and instead of you coming to us, we will come to you. We know what it's like to be busy and understand self care is important. We can come to your home, work, or safe space. Let us help your hands and feet feel better.</p>
-      </Body>
-        </html>
-<p><a href="pages/about.html">Learn More About Us</a></p>
-<nav>
-  <img src="smalllogo.jpg" alt="Logo" style="height: 40px; vertical-align: middle;">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-</nav>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Nails Come to You - Home</title>
+  <link rel="stylesheet" href="css/main.css">
+</head>
+<body>
+  <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
+    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <nav>
+      <a href="index.html" class="btn-primary">Home</a>
+      <a href="about.html" class="btn-primary">About</a>
+      <a href="services.html" class="btn-primary">Services</a>
+      <a href="gallery.html" class="btn-primary">Gallery</a>
+      <a href="contact.html" class="btn-primary">Contact</a>
+    </nav>
+  </div>
+  <h1>Welcome to Nails Come to You</h1>
+  <p>
+    Discover self-care, beauty, and confidence. Book your appointment today!
+  </p>
+  <a href="gallery.html" class="btn-primary">See Our Gallery</a>
+</body>
+</html>
