--- a/gallery.html
+++ b/gallery.html
@@ -3,18 +3,69 @@
 <head>
   <meta charset="UTF-8">
   <title>Gallery - Jasmin Mazariegos</title>
+  <link rel="stylesheet" href="css/main.css">
   <style>
+    body {
+      background-color: pink;
+      font-family: 'Times New Roman', Times, serif;
+      font-size: 12px;
+      margin: 0;
+      padding: 0;
+    }
+    nav {
+      margin: 24px 0 16px 0;
+      font-size: 1em;
+      text-align: center;
+    }
+    nav a {
+      color: #fff;
+      background-color: #e75480;
+      padding: 0.4em 1em;
+      border-radius: 4px;
+      text-decoration: none;
+      font-weight: 600;
+      margin: 0 4px;
+      display: inline-block;
+      transition: background 0.2s;
+    }
+    nav a:hover,
+    nav a:focus {
+      background-color: #b03060;
+      color: #fff;
+    }
+    h1 {
+      font-size: 2em;
+      font-weight: bold;
+      color: #b03060;
+      text-align: center;
+      margin-top: 0.5em;
+      margin-bottom: 1em;
+      letter-spacing: 1px;
+    }
     .gallery-thumb {
       width: 120px;
       height: auto;
       display: block;
+      border-radius: 8px;
+      border: 2px solid #e75480;
+      box-shadow: 0 2px 6px rgba(183,48,96,0.08);
+      margin: 0 auto;
+      transition: box-shadow 0.2s, border-color 0.2s;
+    }
+    .gallery-thumb:hover,
+    .gallery-thumb:focus {
+      box-shadow: 0 4px 16px rgba(183,48,96,0.24);
+      border-color: #b03060;
     }
     table {
       border-collapse: collapse;
-      margin-top: 2em;
+      margin: 2em auto;
+      background: rgba(255,255,255,0.55);
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(183,48,96,0.10);
     }
     td {
-      padding: 8px;
+      padding: 16px 20px;
       text-align: center;
     }
   </style>
@@ -22,9 +73,9 @@
 <body>
   <!-- Global Navigation -->
   <nav>
-    <a href="index.html">Home</a> |
-    <a href="about.html">About</a> |
-    <a href="services.html">Services</a> |
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact Us</a>
   </nav>
