--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
       background: rgba(255,255,255,0.7);
       border-radius: 10px;
       box-shadow: 0 4px 20px rgba(183,48,96,0.10);
-      min-width: 800px;
+      min-width: 600px;
     }
     th, td {
       border: 1px solid #e75480;
@@ -98,60 +98,41 @@
     <tr>
       <th>Page Name</th>
       <th>Public URL</th>
-      <th>Validate</th>
     </tr>
     <tr>
       <td>Home</td>
       <td>
-        <a href="https://jasminmazarod.github.io/index.html" target="_blank">index.html</a>
-      </td>
-      <td>
-        <a class="btn-primary" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjasminmazarod.github.io%2Findex.html" target="_blank">Validate</a>
+        <a href="https://jasminmazarod.github.io/index.html" target="_blank">https://jasminmazarod.github.io/index.html</a>
       </td>
     </tr>
     <tr>
       <td>About</td>
       <td>
-        <a href="https://jasminmazarod.github.io/about.html" target="_blank">about.html</a>
-      </td>
-      <td>
-        <a class="btn-primary" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjasminmazarod.github.io%2Fabout.html" target="_blank">Validate</a>
+        <a href="https://jasminmazarod.github.io/about.html" target="_blank">https://jasminmazarod.github.io/about.html</a>
       </td>
     </tr>
     <tr>
       <td>Services</td>
       <td>
-        <a href="https://jasminmazarod.github.io/services.html" target="_blank">services.html</a>
-      </td>
-      <td>
-        <a class="btn-primary" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjasminmazarod.github.io%2Fservices.html" target="_blank">Validate</a>
+        <a href="https://jasminmazarod.github.io/services.html" target="_blank">https://jasminmazarod.github.io/services.html</a>
       </td>
     </tr>
     <tr>
       <td>Gallery</td>
       <td>
-        <a href="https://jasminmazarod.github.io/gallery.html" target="_blank">gallery.html</a>
-      </td>
-      <td>
-        <a class="btn-primary" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjasminmazarod.github.io%2Fgallery.html" target="_blank">Validate</a>
+        <a href="https://jasminmazarod.github.io/gallery.html" target="_blank">https://jasminmazarod.github.io/gallery.html</a>
       </td>
     </tr>
     <tr>
       <td>Contact</td>
       <td>
-        <a href="https://jasminmazarod.github.io/contact.html" target="_blank">contact.html</a>
-      </td>
-      <td>
-        <a class="btn-primary" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjasminmazarod.github.io%2Fcontact.html" target="_blank">Validate</a>
+        <a href="https://jasminmazarod.github.io/contact.html" target="_blank">https://jasminmazarod.github.io/contact.html</a>
       </td>
     </tr>
     <tr>
       <td>Test</td>
       <td>
-        <a href="https://jasminmazarod.github.io/test.html" target="_blank">test.html</a>
-      </td>
-      <td>
-        <a class="btn-primary" href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fjasminmazarod.github.io%2Ftest.html" target="_blank">Validate</a>
+        <a href="https://jasminmazarod.github.io/test.html" target="_blank">https://jasminmazarod.github.io/test.html</a>
       </td>
     </tr>
   </table>
