--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       <a href="contact.html" class="btn-primary">Contact</a>
     </nav>
   </div>
-  <h1>About: Nails Come to You</h1>
+  <h1>About Nails Come to You</h1>
   <p>
    We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed
   </p>
