--- a/contact.html
+++ b/contact.html
@@ -29,5 +29,6 @@
     <textarea id="message" name="message"></textarea><br>
     <button type="submit" class="btn-primary">Send</button>
   </form>
+   <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
