--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
     Discover self-care, beauty, and confidence. Book your appointment today!
   </p>
   <a href="gallery.html" class="btn-primary">See Our Gallery</a>
+   <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
