--- a/test.html
+++ b/test.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Site Pages Test - Jasmin Mazariegos</title>
+  <title>Website Page Directory & Test | Jasmin Mazariegos Web Portfolio</title>
+  <meta name="description" content="Browse a complete directory of public pages for Jasmin Mazariegos' web portfolio and small business Nails Come to You, including Home, About, Services, Gallery, Contact, and Test. View and navigate all site URLs for fast access.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
   <style>
@@ -81,10 +82,18 @@
       color: #fff;
     }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
 </head>
 <body>
   <div class="header-nav">
-    <img src="smalllogo.jpg" alt="JasminMazaRod Logo">
+    <img src="smalllogo.jpg" alt="JasminMazaRod logo pink and white, small size">
     <nav>
       <a href="index.html" class="btn-primary">Home</a>
       <a href="about.html" class="btn-primary">About</a>
