--- a/about.html
+++ b/about.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About - Nails Come to You</title>
+  <title>About | Mobile Nail Services in Greeley, CO | Nails Come to You</title>
+  <meta name="description" content="Learn more about Nails Come to You, a mobile nail salon proudly serving Greeley, CO since July 2025. Discover our experience, mission, and commitment to the best nail care and customer service.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
 </head>
 <body>
   <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <img src="smalllogo.jpg" alt="JasminMazaRod logo pink and white, small size">
     <nav>
       <a href="index.html" class="btn-primary">Home</a>
       <a href="about.html" class="btn-primary">About</a>
@@ -19,7 +28,7 @@
   </div>
   <h1>About Nails Come to You</h1>
   <p>
-   We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed
+   We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed.
   </p>
   <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
