--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact - Nails Come to You</title>
+  <title>Contact | Book Mobile Nail Services in Greeley, CO | Nails Come to You</title>
+  <meta name="description" content="Contact Nails Come to You in Greeley, CO. Call, text, or message to book your next mobile nail appointment. Reach out for the best prices and services in town!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
 </head>
 <body>
   <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <img src="smalllogo.jpg" alt="JasminMazaRod logo pink and white, small size" style="height:40px;">
     <nav>
       <a href="index.html" class="btn-primary">Home</a>
       <a href="about.html" class="btn-primary">About</a>
