--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Gallery - Jasmin Mazariegos</title>
+  <title>Nail Art Gallery | Portfolio of Designs in Greeley, CO | Nails Come to You</title>
+  <meta name="description" content="Browse the gallery of stunning nail designs and art by Nails Come to You. See examples of pink, red, and white nails. Mobile nail services in Greeley, CO. Book your appointment today!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
   <style>
@@ -70,6 +71,14 @@
       text-align: center;
     }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
 </head>
 <body>
   <!-- Global Navigation -->
@@ -86,17 +95,17 @@
     <tr>
       <td>
         <a href="images/pinknails.jpg">
-          <img src="images/pinknails.jpg" class="gallery-thumb" alt="Looking to feel your best, refreshed, some self care? Let us help you.">
+          <img src="images/pinknails.jpg" class="gallery-thumb" alt="pink acrylic nails with glossy finish, self-care design, Nails Come to You Greeley gallery">
         </a>
       </td>
       <td>
         <a href="images/rednails.jpg">
-          <img src="images/rednails.jpg" class="gallery-thumb" alt="Valentines? Anniversary? Feeling confident is as important to us as you. Ready for your call.">
+          <img src="images/rednails.jpg" class="gallery-thumb" alt="red gel nails romantic style, valentine’s nail art, Nails Come to You Greeley gallery">
         </a>
       </td>
       <td>
         <a href="images/whitenails.jpg">
-          <img src="images/whitenails.jpg" class="gallery-thumb" alt="You can never go wrong with white nails! Call us.">
+          <img src="images/whitenails.jpg" class="gallery-thumb" alt="classic white nails, elegant simple manicure, Nails Come to You Greeley gallery">
         </a>
       </td>
     </tr>
