--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Nails Come to You - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Index | Welcome to | Nails Come to You</title>
+  <meta name="description" content="Welcome to the best place you've ever imagined. Discover self-care, beauty, and confidence.Book your appointment today!">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -25,3 +28,11 @@
    <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
+ <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
