--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nails Come to You - Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Index | Welcome to | Nails Come to You</title>
-  <meta name="description" content="Welcome to the best place you've ever imagined. Discover self-care, beauty, and confidence.Book your appointment today!">
+  <title>Nails Come to You | Mobile Nail Services | Home</title>
+  <meta name="description" content="Nails Come to You offers premium mobile nail services for self-care, beauty, and confidence. Book your appointment and experience luxury nail treatments at your location today!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
 </head>
 <body>
   <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <img src="smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" style="height:40px;">
     <nav>
       <a href="index.html" class="btn-primary">Home</a>
       <a href="about.html" class="btn-primary">About</a>
@@ -25,14 +31,6 @@
     Discover self-care, beauty, and confidence. Book your appointment today!
   </p>
   <a href="gallery.html" class="btn-primary">See Our Gallery</a>
-   <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
+  <p>&copy; 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
- <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-XXXXXXXXX-X');
-  </script>
