--- a/services.html
+++ b/services.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Services - Nails Come to You</title>
+  <title>Mobile Nail Services & Spa Treatments | Nails Come to You</title>
+  <meta name="description" content="Discover our full range of mobile nail services, spa treatments, nail art, and self-care consultations. Book an appointment with Nails Come to You for beauty and relaxation delivered to your door.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/main.css">
   <style>
@@ -20,10 +21,18 @@
       display: block;
     }
   </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
 </head>
 <body>
   <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-    <img src="smalllogo.jpg" alt="JasminMazaRod Logo" style="height:40px;">
+    <img src="smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" style="height:40px;">
     <nav>
       <a href="index.html" class="btn-primary">Home</a>
       <a href="about.html" class="btn-primary">About</a>
@@ -49,6 +58,6 @@
     </iframe>
   </div>
 
-  <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
+  <p>&copy; 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
