--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-    <img src="smalllogo.jpg" alt="JasminMazaRod logo pink and white, small size">
+    <img src="smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" style="height:40px;">
     <nav>
       <a href="index.html" class="btn-primary">Home</a>
       <a href="about.html" class="btn-primary">About</a>
@@ -28,8 +28,8 @@
   </div>
   <h1>About Nails Come to You</h1>
   <p>
-   We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed.
+    We were founded in Greeley, Colorado in July 2025. Though we are new to the Greeley community, we aren't new to the nail world. Best prices, best services, best looking nails, guaranteed.
   </p>
-  <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
+  <p>&copy; 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
