--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,15 @@
       margin: 24px 0 16px 0;
       font-size: 1em;
       text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 16px;
+    }
+    .logo {
+      height: 40px;
+      margin-right: 16px;
+      vertical-align: middle;
     }
     nav a {
       color: #fff;
@@ -64,74 +73,4 @@
       margin: 2em auto;
       background: rgba(255,255,255,0.55);
       border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(183,48,96,0.10);
-    }
-    td {
-      padding: 16px 20px;
-      text-align: center;
-    }
-  </style>
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-XXXXXXXXX-X');
-  </script>
-</head>
-<body>
-  <!-- Global Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="contact.html">Contact Us</a>
-  </nav>
 
-  <h1>Gallery</h1>
-  <table>
-    <tr>
-      <td>
-        <a href="images/pinknails.jpg">
-          <img src="images/pinknails.jpg" class="gallery-thumb" alt="pink acrylic nails with glossy finish, self-care design, Nails Come to You Greeley gallery">
-        </a>
-      </td>
-      <td>
-        <a href="images/rednails.jpg">
-          <img src="images/rednails.jpg" class="gallery-thumb" alt="red gel nails romantic style, valentine’s nail art, Nails Come to You Greeley gallery">
-        </a>
-      </td>
-      <td>
-        <a href="images/whitenails.jpg">
-          <img src="images/whitenails.jpg" class="gallery-thumb" alt="classic white nails, elegant simple manicure, Nails Come to You Greeley gallery">
-        </a>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <!-- Placeholder for future image -->
-      </td>
-      <td>
-        <!-- Placeholder for future image -->
-      </td>
-      <td>
-        <!-- Placeholder for future image -->
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <!-- Placeholder for future image -->
-      </td>
-      <td>
-        <!-- Placeholder for future image -->
-      </td>
-      <td>
-        <!-- Placeholder for future image -->
-      </td>
-    </tr>
-  </table>
-   <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
-</body>
-</html>
