--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div style="display: flex; align-items: center; gap: 12px; margin-bottom: 20px;">
-    <img src="smalllogo.jpg" alt="JasminMazaRod logo pink and white, small size" style="height:40px;">
+    <img src="smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" style="height:40px;">
     <nav>
       <a href="index.html" class="btn-primary">Home</a>
       <a href="about.html" class="btn-primary">About</a>
@@ -39,6 +39,6 @@
     <textarea id="message" name="message"></textarea><br>
     <button type="submit" class="btn-primary">Send</button>
   </form>
-   <p>(c) 2025 Nails Come to You. All Rights Reserved.</p>
+  <p>&copy; 2025 Nails Come to You. All Rights Reserved.</p>
 </body>
 </html>
