--- a/gallery.html
+++ b/gallery.html
@@ -14,14 +14,23 @@
       margin: 0;
       padding: 0;
     }
+    .container {
+      max-width: 900px;
+      margin: 40px auto 0 auto;
+      padding: 24px 16px 32px 16px;
+      background: rgba(255,255,255,0.55);
+      border-radius: 14px;
+      box-shadow: 0 4px 20px rgba(183,48,96,0.10);
+    }
     nav {
-      margin: 24px 0 16px 0;
       font-size: 1em;
       text-align: center;
+      margin-bottom: 16px;
+      margin-top: 0;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 16px;
+      gap: 12px;
     }
     .logo {
       height: 40px;
@@ -71,6 +80,82 @@
     table {
       border-collapse: collapse;
       margin: 2em auto;
-      background: rgba(255,255,255,0.55);
+      background: none;
       border-radius: 10px;
+      box-shadow: none;
+    }
+    td {
+      padding: 16px 20px;
+      text-align: center;
+    }
+    .footer {
+      text-align: center;
+      margin-top: 2em;
+    }
+  </style>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-XXXXXXXXX-X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-XXXXXXXXX-X');
+  </script>
+</head>
+<body>
+  <div class="container">
+    <nav>
+      <img src="smalllogo.jpg" alt="Nails Come to You logo, pink and white round design" class="logo">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
+    </nav>
 
+    <h1>Gallery</h1>
+    <table>
+      <tr>
+        <td>
+          <a href="images/pinknails.jpg">
+            <img src="images/pinknails.jpg" class="gallery-thumb" alt="pink acrylic nails with glossy finish, self-care design, Nails Come to You Greeley gallery">
+          </a>
+        </td>
+        <td>
+          <a href="images/rednails.jpg">
+            <img src="images/rednails.jpg" class="gallery-thumb" alt="red gel nails romantic style, valentine’s nail art, Nails Come to You Greeley gallery">
+          </a>
+        </td>
+        <td>
+          <a href="images/whitenails.jpg">
+            <img src="images/whitenails.jpg" class="gallery-thumb" alt="classic white nails, elegant simple manicure, Nails Come to You Greeley gallery">
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <!-- Placeholder for future image -->
+        </td>
+        <td>
+          <!-- Placeholder for future image -->
+        </td>
+        <td>
+          <!-- Placeholder for future image -->
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <!-- Placeholder for future image -->
+        </td>
+        <td>
+          <!-- Placeholder for future image -->
+        </td>
+        <td>
+          <!-- Placeholder for future image -->
+        </td>
+      </tr>
+    </table>
+    <p class="footer">&copy; 2025 Nails Come to You. All Rights Reserved.</p>
+  </div>
+</body>
+</html>
